--- a/security.html
+++ b/security.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zynga/job/oyCkbfwp'>Zynga Careers - Cloud Security Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zynga/job/oyCkbfwp'>Zynga Careers - Cloud Security Architect</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -111,7 +111,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939846'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939846'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1942715'>Job Application for Senior Application Security Engineer at Culture Amp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1942715'>Job Application for Senior Application Security Engineer at Culture Amp</a></h5> 
 <p><span class="badge badge-light">Melbourne  Melbourne San Francisco New York London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -191,7 +191,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nSoGpMwC'>Herjavec Group Careers - Senior Security Engineer, Splunk/Qradar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nSoGpMwC'>Herjavec Group Careers - Senior Security Engineer, Splunk/Qradar</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -241,7 +241,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-software-engineer-7186'>Cyber Security Software Engineer - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-software-engineer-7186'>Cyber Security Software Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -289,7 +289,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/security/enterprise-security-engineer-staff-principal-1307207/?gh_src=82a8057f1'>Enterprise Security Engineer (Staff/Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/enterprise-security-engineer-staff-principal-1307207/?gh_src=82a8057f1'>Enterprise Security Engineer (Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -411,7 +411,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Plano, TX Arlington, VA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/16b6fd2c-8960-4f22-b577-ccf83d0c13d6'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<h5><a href='https://jobs.lever.co/prominentedge/16b6fd2c-8960-4f22-b577-ccf83d0c13d6'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -435,7 +435,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/glidewelldental/job/oLSmbfwU'>Glidewell Dental Careers - Sr. Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/glidewelldental/job/oLSmbfwU'>Glidewell Dental Careers - Sr. Security Engineer</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
