--- a/machine.html
+++ b/machine.html
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lendbuzz/5fbce6f5-1c2a-41f8-92f5-424eec1ae960'>Lendbuzz - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/lendbuzz/5fbce6f5-1c2a-41f8-92f5-424eec1ae960'>Lendbuzz - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Boston  Boston</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -157,7 +157,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
+<h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -210,7 +210,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698333992-machine-learning-ml-engineer-core-ml'>Turnitin, LLC Machine Learning (ML) Engineer- Core ML | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698333992-machine-learning-ml-engineer-core-ml'>Turnitin, LLC Machine Learning (ML) Engineer- Core ML | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -255,7 +255,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698156568-head-of-machine-learning'>Omio Head of Machine Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698156568-head-of-machine-learning'>Omio Head of Machine Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -347,7 +347,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oS11afwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nKM2iMw7'>Benefitfocus Careers - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oS11afwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nKM2iMw7'>Benefitfocus Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
